Mon Nov 20 18:01:03 CET 2006 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_data.c: applied patches based on Michael Banck
	  suggestions to build on Hurd and kFreeBSD, should fix #377050
	  and #377066

2006-11-20  Alexander Larsson  <alexl@redhat.com>

	* server/gam_inotify.c: (gam_inotify_init):
	Enable the basic polling code for the inotify
	backend so e.g. polling on NFS works.

Tue Oct 31 15:33:28 CET 2006 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in doc//*: prepare release of 0.1.8 rebuild the docs

Wed Oct 25 18:14:11 CEST 2006 Daniel Veillard <veillard@redhat.com>

	* configure.in: applied atch from James Andrewartha fixing
	  compilation with Sun's compiler c.f. #365029

2006-09-08  Alexander Larsson  <alexl@redhat.com>

	* server/gam_inotify.c: (gam_inotify_send_initial_events):
	Send correct initial events for missing files

2006-09-08  Alexander Larsson  <alexl@redhat.com>

	* server/gam_connection.c: (gam_connection_close):
	Don't remove 0 source (from connection flush timeout fix)
	
	* server/gam_inotify.c: (gam_inotify_add_subscription):
	Add the sub to the listener so it will get freed with it
	
	* server/inotify-helper.c: (ih_sub_foreach_worker):
	Don't free sub_list items twice
	
	* server/inotify-sub.c: (ih_sub_get_filename):
	Actually get the filename

2006-09-05  Alexander Larsson  <alexl@redhat.com>

	* lib/gam_error.c:
	* libgamin/gam_api.c:
	* server/gam_connection.[ch]:
	* server/gam_server.[ch]:
	Don't use running timers for server idle timeout
	and debug signal handler.

2006-09-05  Alexander Larsson  <alexl@redhat.com>

	* server/gam_connection.c: 
	* server/gam_eq.[ch]:
	Only run connection flush timeout when needed.

2006-09-05  Alexander Larsson  <alexl@redhat.com>

	* server/gam_inotify.c: (gam_inotify_init):
	Install kernel monitoring hooks to fix previous commit.

2006-09-04  John McCutchan  <john@johnmccutchan.com>

	* server/Makefile.am:
	* server/gam_inotify.c: Ported to inotify-helper.